[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw5lib"
version = "0.1.0"
description = "HW5 OOP diabetes library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pytest>=8.4.2",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

# --- important for src/ layout ---
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hw5lib*"]
